--- a/RoguelikeBase2D/RoguelikeBase2D.csproj
+++ b/RoguelikeBase2D/RoguelikeBase2D.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Arch" Version="1.3.3-alpha" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
